--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aipbxvosk",
-  "version": "0.1.3",
-  "description": "vosk server for aiPBX",
+  "name": "krasterisk_speech_server",
+  "version": "0.1.5",
+  "description": "Speech server for aiPBX",
   "author": "Krasterisk LTD",
   "private": true,
   "license": "Apache",
