--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,35 @@
-version: '3'
-services:
-  simplePBX:
-    image: pbx:latest
-    container_name: simplePBX
-    restart: always
-    ports:
-      - 3000:3000
-    volumes:
-      - ./.production.env:/opt/app/.production.env
+version: '3.8'
 
+services:
+  nodejs:
+    build: .
+    restart: unless-stopped
+    networks:
+      - app-network
+    environment:
+      - NODE_ENV=production
+    volumes:
+      - ./:/var/www
+      - node_modules:/app/node_modules
+    ports:
+      - "7001:7001"
+
+  nginx:
+    image: nginx:alpine
+    restart: unless-stopped
+    networks:
+      - app-network
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl:/etc/letsencrypt/live/yourdomain.com
+      - ./dhparam.pem:/etc/ssl/certs/dhparam.pem
+
+volumes:
+  node_modules:
+
+networks:
+  app-network:
+    driver: bridge
