--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,10 @@ jobs:
 #        uses: webfactory/ssh-agent@v0.9.1
 #        with:
 #          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Add SSH key
-        run: echo "$SSH_PRIVATE_KEY" | ssh-add -
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Start ssh-agent
+        uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Deploy to Server
         run: |
