--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - NODE_ENV=production
     volumes:
-      - ./:/var/www
+      - ./:/app
       - node_modules:/app/node_modules
     ports:
       - "7001:7001"
