--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     environment:
       - NODE_ENV=production
     volumes:
-      - ./:/app
-      - node_modules:/app/node_modules
+      - ./:/app/speech-server
+      - node_modules:/app/speech-server/node_modules
     ports:
       - "7001:7001"
 
