--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,18 @@ jobs:
       - name: Deploy to Server
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SPEECH_USER }}@${{ secrets.SPEECH_HOST }} << 'EOF'
+          set -e
+      
+          if [ ! -d /app/speech-server ]; then
+            mkdir -p /app
+            cd /app
+            git clone git@github.com:your-username/speech-server.git
+          else
             cd /app/speech-server
             git pull
-            docker compose down
-            docker compose up --build -d
+          fi
+      
+          cd /app/speech-server
+          docker compose down
+          docker compose up --build -d
           EOF
