--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Speech-server to Node Container
+name: Deploy speech-server to Node Container
 
 on:
   push:
@@ -10,30 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-#      - name: Setup SSH
-#        uses: webfactory/ssh-agent@v0.9.1
-#        with:
-#          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Start ssh-agent
-        uses: webfactory/ssh-agent@v0.5.4
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.9.1
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Deploy to Server
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SPEECH_USER }}@${{ secrets.SPEECH_HOST }} << 'EOF'
-          set -e
-      
-          if [ ! -d /app/speech-server ]; then
-            mkdir -p /app
-            cd /app
-            git clone git@github.com:your-username/speech-server.git
-          else
-            cd /app/speech-server
+            cd /var/www/speech-server
             git pull
-          fi
-      
-          cd /app/speech-server
-          docker compose down
-          docker compose up --build -d
+            docker compose down
+            docker compose up --build -d
           EOF
