--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   nodejs:
     build: .
@@ -14,18 +12,18 @@ services:
     ports:
       - "7001:7001"
 
-  nginx:
-    image: nginx:alpine
-    restart: unless-stopped
-    networks:
-      - app-network
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./ssl:/etc/letsencrypt/live/yourdomain.com
-      - ./dhparam.pem:/etc/ssl/certs/dhparam.pem
+#  nginx:
+#    image: nginx:alpine
+#    restart: unless-stopped
+#    networks:
+#      - app-network
+#    ports:
+#      - "80:80"
+#      - "443:443"
+#    volumes:
+#      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+#      - /etc/letsencrypt/live/speech.krasterisk.ru:/etc/letsencrypt/live/speech.krasterisk.ru
+
 
 volumes:
   node_modules:
